--- a/app/views/menu_templates/new_form.html.erb
+++ b/app/views/menu_templates/new_form.html.erb
@@ -51,7 +51,7 @@
         </select>
       </div>
       <div class="col">
-        INPUT TEXT FOR time inpUT
+        INPUT TEXT FOR TIME INPUT
       </div>
     </div>
     <div class="form-group">
